--- a/index.html
+++ b/index.html
@@ -85,15 +85,31 @@
   };
 	
 		  // Get the input and output elements
-  var cnpsInput1 = document.getElementById("cnps-question1");
-  var cnpsOutput1 = document.getElementById("cnps-output1");
+  var cnpsInput4 = document.getElementById("cnps-question4");
+  var cnpsOutput4 = document.getElementById("cnps-output4");
 
   // Update the output value when the input changes
-  cnpsInput1.oninput = function() {
-    cnpsOutput1.value = cnpsInput1.value;
+  cnpsInput4.oninput = function() {
+    cnpsOutput4.value = cnpsInput4.value;
   };
 	
+		  // Get the input and output elements
+  var cnpsInput5 = document.getElementById("cnps-question5");
+  var cnpsOutput5 = document.getElementById("cnps-output5");
+
+  // Update the output value when the input changes
+  cnpsInput5.oninput = function() {
+    cnpsOutput5.value = cnpsInput5.value;
+  };
 	
+		  // Get the input and output elements
+  var cnpsInput6 = document.getElementById("cnps-question6");
+  var cnpsOutput6 = document.getElementById("cnps-output6");
+
+  // Update the output value when the input changes
+  cnpsInput6.oninput = function() {
+    cnpsOutput6.value = cnpsInput4.value;
+  };	
 </script>
 
 </body>
